# recall

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  lang_utils.py  main.py  newbuild.sh  requirements.txt  server.sh  test_questions.md  vec_utils.py
client/: main.py
server/: main.cpp  main.py
server/include/: crow_all.h:Zone.Identifier
tests/: lang.py  sim.py
